--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                       </tr>
                     </tbody>
                   </table>
-                  <a href="./assets/Thomas_cv/CV.pdf"><button class="btn btn-primary mt-5 mb-5">Télécharger CV</button></a>
+                  <a href="./assets/Thomas_cv/thomas_cv.pdf"><button class="btn btn-primary mt-5 mb-5">Télécharger CV</button></a>
                 </div>
                </div>
              </div>
