--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <div class="container mt-5">
   <div class="col-lg-12">
     <div class="row mx-auto slider">
-      <div class="col-7">
+      <div class="col-12">
         <h5 class="bonjour mb-4"><b>Bonjour, je m'appel</b></h5>
       <h1 class="name"><b>Thomas</b> <span><b>Cissé</b></span></h1>
       <h4 class="description"><b></b></h4>
@@ -91,7 +91,7 @@
         <div class="col-10 mx-auto">
           <h2 class=" mb-5 about">A Propos</h2>
           <h3>Je suis Thomas.</h3>
-          <p  >Je suis un développeur web junior en
+          <p  >Je suis un développeur web en
             quête d'expériences professionnelles
             dans le développement, la
             maintenance, la mise à jour et le
